(feat:auth-11):implement end point logout
