# cm.domeni.authentis-users/src/main/java/cm/domeni/authentis_users/api/AuthResource.java
@@ -17,4 +17,10 @@ public class AuthResource implements AuthApi {
       RefreshTokenRequest refreshTokenRequest) {
     return ResponseEntity.ok(authService.refreshToken(refreshTokenRequest));
   }
+
+  @Override
+  public ResponseEntity<Void> logout(RefreshTokenRequest refreshTokenRequest) {
+    authService.logout(refreshTokenRequest);
+    return ResponseEntity.noContent().build();
+  }
 }
